# simple-grpc

./: .gitignore  .gitmodules  LICENCE  README.md  configure  configure.bat  run-receiver  run-receiver.bat  run-sender  run-sender.bat
grpc-api/cpp-impl/: .gitignore  CMakeLists.txt  compile-protos  compile-protos.bat
grpc-api/java-impl/: .gitignore  build.gradle  settings.gradle
grpc-api/java-impl/tests/org/simple/api/: DummyTest.java
grpc-api/schema/: greet.proto
receiver/: CMakeLists.txt
receiver/include/simple/: greet-service.h
receiver/src/: greet-service.cpp  main.cpp
sender/: build.gradle  settings.gradle
sender/res/org/simple/sender/views/: MainView.fxml
sender/src/org/simple/sender/: App.java
sender/src/org/simple/sender/controllers/: MainController.java
sender/src/org/simple/sender/models/: MainModel.java
sender/tests/org/simple/sender/: DummyTest.java
